src/test/deca/codegen/valid/sansObjet/DebordementIntMinus.deca
/* Description:
    Tester le débordement d'une soustraction

    Historique:
      cree le 16/01/2020
    Sortie attendu: 2147483647


*/
{
	int a = (-2147483647) -2;
  print(a);
}
