src/test/deca/codegen/invalid/OperationSurVarNonInit14.deca
/* Description:
    Tester des opérations (unaryMinus) avec des variables non initialisée

    Historique:
      cree le 16/01/2020
    Sortie attendu:


*/
{
	int x;
  int a =  -x;
}
